pokemon-app/src/styles/EnemyPokemon-mobile.css
@media screen and (max-width: 700px), (max-height: 820px) {
  .enemy-pokemon__display-name {
    font-size: 1.7vw;
    width: 110%;
    border: 4px solid black;
  }
  .enemy-pokemon__display-image {
    position: fixed;
    top: 21%;
    left: 22%;
    height: 20%;
    width: 20%;
  }
  .enemy-pokemon__moves-title,
  .enemy-pokemon__stats-title {
    font-size: 3vw;
    padding: 1%;
    border: solid black 4px;
    border-radius: 10px;
  }
  .enemy-pokemon__stats,
  .enemy-pokemon__moves {
    font-size: 2vw;
    border: 4px solid black;
    border-radius: 10px;
  }
  .enemy-pokemon__stats-list,
  .enemy-pokemon__moves-list {
    margin: 0px;
  }
  .enemy-pokemon__stats-list > li,
  .enemy-pokemon__moves-list > li {
    font-size: 1em;
    margin: 0px;
  }
  .enemy-pokemon__display-image {
    position: fixed;
    top: 14%;
    left: 49%;
    height: 20vh;
    width: 20%;
  }
  .enemy-pokemon__display-image > img {
    height: 120%;
    width: 140%;
  }
  .enemy-pokemon__stats-title,
  .enemy-moves-title {
    font-size: 3vw;
    border: solid black 4px;
    border-radius: 10px;
    padding: 0.3em;
  }
  .enemy-pokemon__stats,
  .enemy-moves-box {
    font-size: 2vw;
  }
  .enemy-pokemon__stats-list {
    padding-left: 16%;
  }
  .enemy-pokemon-types {
    position: absolute;
    top: 34%;
    right: 17%;
  }
  #enemy-moves-list {
    padding-left: 16%;
    margin: 0;
  }
  #enemy-moves-list > li {
    margin: 0;
  }
  .enemy-poke {
    padding-top: 3px;
    position: fixed;
    top: 37.5%;
    left: 52%;
    height: 0.75vh;
    width: 20%;
    font-size: 1.5vw;
  }
  .user-poke {
    position: fixed;
    top: 49%;
    left: 18%;
    height: 0.75vh;
    width: 20%;
    font-size: 1.5vw;
    z-index: 99;
  }
}

